Changed: New layout and functionality for My Forums. You can now ignore forums and hide them from the list. Fixed: Javascript resizeImages function split into resizeImages and redoResizeImages which are called separatly like addOverFlow and redoOverFlow Fixed: Guests no longer check for unread PMs or resize images or page layout. Fixed: Unread PMs were being marked read by any user and not just the recipient. Removed: Removed unrequired classes from default style sheet.

--- a/forum/styles/Default/style.css
+++ b/forum/styles/Default/style.css
@@ -1104,21 +1104,13 @@ a {
     text-align: center;
 }
 
-.image_resize_container {
-    border: 0px;
-    border-collapse: collapse;
-}
-
 .image_resize_text {
     border: 1px dashed #000000;
-    height: 30px;
+    height: 25px;
     background-image: url('../../images/warningbg.png');
     font-size: 8pt;
     cursor: pointer;
-}
-
-.image_resize_image {
-    border: 0px;
+    overflow: hidden;
 }
 
 .image_resize_icon {
